--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@line/liff": "^2.23.0",
+    "@line/liff": "^2.27.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@reown/appkit": "^1.8.4",
     "@tanstack/react-query": "^5.0.0",
     "@web3-react/core": "^8.2.0",
     "@web3-react/injected-connector": "^6.0.7",
