--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,36 @@
-REACT_APP_LIFF_ID=your_liff_id_here
-REACT_APP_MINI_DAPP_CLIENT_ID=b19f517c-92c8-4399-91c6-67b7b545f04e
-REACT_APP_MINI_DAPP_CLIENT_SECRET=5dff7e29-4a13-4263-bf22-55116e0a5877
-REACT_APP_REOWN_PROJECT_ID=your_reown_project_id_here
+REACT_APP_API_BASE_URL=http://localhost:3001/api
+REACT_APP_WS_BASE_URL=ws://localhost:3001
+
+REACT_APP_LIFF_ID=your_line_liff_id_here
+REACT_APP_MINI_DAPP_CLIENT_ID=your_mini_dapp_client_id
+REACT_APP_MINI_DAPP_CLIENT_SECRET=your_mini_dapp_client_secret
+
+REACT_APP_REOWN_PROJECT_ID=your_reown_wallet_connect_project_id
+
+REACT_APP_KAIA_CHAIN_ID_MAINNET=8217
+REACT_APP_KAIA_CHAIN_ID_TESTNET=1001
+REACT_APP_KAIA_RPC_URL_MAINNET=https://public-en.node.kaia.io
+REACT_APP_KAIA_RPC_URL_TESTNET=https://public-en-kairos.node.kaia.io
+
+REACT_APP_USDT_ADDRESS_MAINNET=0xd077a400968890eacc75cdc901f0356c943e4fdb
+REACT_APP_USDT_ADDRESS_TESTNET=0x5c74070fdea071359b86082bd9f9b3deaafbe32b
+
+REACT_APP_MARKETPLACE_CONTRACT_MAINNET=0x1234567890123456789012345678901234567890
+REACT_APP_MARKETPLACE_CONTRACT_TESTNET=0x2345678901234567890123456789012345678901
+
+REACT_APP_EXPLORER_URL_MAINNET=https://kaiascan.io
+REACT_APP_EXPLORER_URL_TESTNET=https://kairos.kaiascan.io
+
+REACT_APP_SUPPORT_EMAIL=support@kaiacards.com
+REACT_APP_COMPANY_NAME=KaiaCards
+
+REACT_APP_ANALYTICS_ID=your_analytics_id
+REACT_APP_SENTRY_DSN=your_sentry_dsn
+
+REACT_APP_DEFAULT_LANGUAGE=en
+REACT_APP_SUPPORTED_LANGUAGES=en,ko,ja,th,id,zh
+
+REACT_APP_MAX_ORDER_VALUE=5000
+REACT_APP_MIN_ORDER_VALUE=5
+
+NODE_ENV=development
