--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@line/liff": "^2.27.2",
+    "@linenext/dapp-portal-sdk": "^1.3.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -23,7 +24,9 @@
   },
   "scripts": {
     "dev": "vite",
+    "dev:mini": "vite --mode mini-dapp",
     "build": "vite build",
+    "build:mini": "vite build --mode mini-dapp",
     "preview": "vite preview"
   },
   "devDependencies": {
