configure vercel deployment + fix wallet hooks

--- a/.env.mini-dapp
+++ b/.env.mini-dapp
@@ -1,5 +1,5 @@
-VITE_LIFF_ID=YOUR_LIFF_ID_HERE
+VITE_LIFF_ID=2008107509-1kq9JJmd
 VITE_KAIA_CLIENT_ID=YOUR_KAIA_CLIENT_ID_HERE
 VITE_KAIA_CHAIN_ID=8217
-VITE_API_URL=http://localhost:3001
+VITE_API_URL=https://api.kaiacards.com
 VITE_PAYMENT_ADDRESS=0x0000000000000000000000000000000000000000
