--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@ node_modules/
 .env
 .env.local
 dist/
+dist-mini/
 build/
 *.log
 .vercel
+
+# But keep example env files
+!.env.example
+!.env.mini-dapp
+!.env.production
