--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@ VITE_LIFF_ID=2008107509-1kq9JJmd
 VITE_KAIA_CLIENT_ID=
 VITE_KAIA_CHAIN_ID=8217
 VITE_API_URL=https://api.kaiacards.com
-VITE_PAYMENT_ADDRESS=
+VITE_PAYMENT_ADDRESS=0xd077a400968890eacc75cdc901f0356c943e4fdb
