--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@line/bot-sdk": "^10.2.0",
     "@line/liff": "^2.27.2",
     "@linenext/dapp-portal-sdk": "^1.4.4",
     "@radix-ui/react-dialog": "^1.0.5",
